fix: space alignments in options

--- a/src/options/body.scss
+++ b/src/options/body.scss
@@ -1,5 +1,10 @@
 body {
-	height: 350px;
+	@media (prefers-color-scheme: light) {
+		--background-color: #fff;
+	}
+
+	margin: 0;
+	height: 410px;
 	width: 600px;
 	max-width: 100%;
 	max-height: 100%;
