--- a/src/options/range-scale.scss
+++ b/src/options/range-scale.scss
@@ -3,6 +3,6 @@
 	width: $range-width;
 	height: 5px;
 	right: 2px;
-	bottom: -1px;
+	bottom: 0;
 	opacity: .5;
 }
