--- a/src/sass-commons/base.scss
+++ b/src/sass-commons/base.scss
@@ -64,7 +64,7 @@ body {
 		--graphics-color: var(--color--light);
 		--value-field-color: var(--color--gray-transparent);
 		--colored-value--light: 50%;
-	}	
+	}
 }
 
 h1 {
@@ -75,7 +75,7 @@ h1 {
 hr {
 	border-top: none;
 	border-bottom: 1px dashed rgb(120 120 120 / 50%);
-	margin: 1.5em 0;
+	margin: 1.3rem 0;
 }
 
 p {
